--- a/Reports/index.html
+++ b/Reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Web Automation Results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Oct 23, 2024 05:08:52 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 14, 2025 07:04:32 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">LoginErrorValidation</p>
+            <p class="name">submitOrder</p>
             <p class="text-sm">
-              <span>5:09:02 PM</span> / <span>00:00:01:821</span>
+              <span>7:04:50 PM</span> / <span>00:00:07:372</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">LoginErrorValidation</h5>
-<span class='badge badge-success'>10.23.2024 5:09:02 PM</span>
-<span class='badge badge-danger'>10.23.2024 5:09:04 PM</span>
-<span class='badge badge-default'>00:00:01:821</span>
+<h5 class="test-status text-pass">submitOrder</h5>
+<span class='badge badge-success'>01.14.2025 7:04:50 PM</span>
+<span class='badge badge-danger'>01.14.2025 7:04:57 PM</span>
+<span class='badge badge-default'>00:00:07:372</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:09:04 PM</td>
+        <td>7:04:57 PM</td>
         <td>
           Test Passed
         </td>
@@ -120,9 +120,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">submitOrder</p>
+            <p class="name">LoginErrorValidation</p>
             <p class="text-sm">
-              <span>5:09:02 PM</span> / <span>00:00:07:319</span>
+              <span>7:05:00 PM</span> / <span>00:00:03:372</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -130,10 +130,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">submitOrder</h5>
-<span class='badge badge-success'>10.23.2024 5:09:02 PM</span>
-<span class='badge badge-danger'>10.23.2024 5:09:10 PM</span>
-<span class='badge badge-default'>00:00:07:319</span>
+<h5 class="test-status text-pass">LoginErrorValidation</h5>
+<span class='badge badge-success'>01.14.2025 7:05:00 PM</span>
+<span class='badge badge-danger'>01.14.2025 7:05:03 PM</span>
+<span class='badge badge-default'>00:00:03:372</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:09:10 PM</td>
+        <td>7:05:03 PM</td>
         <td>
           Test Passed
         </td>
@@ -161,9 +161,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">ProductErrorValidation</p>
+            <p class="name">OrderHistoryTest</p>
             <p class="text-sm">
-              <span>5:09:09 PM</span> / <span>00:00:09:149</span>
+              <span>7:05:02 PM</span> / <span>00:00:07:311</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -171,10 +171,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">ProductErrorValidation</h5>
-<span class='badge badge-success'>10.23.2024 5:09:09 PM</span>
-<span class='badge badge-danger'>10.23.2024 5:09:18 PM</span>
-<span class='badge badge-default'>00:00:09:149</span>
+<h5 class="test-status text-pass">OrderHistoryTest</h5>
+<span class='badge badge-success'>01.14.2025 7:05:02 PM</span>
+<span class='badge badge-danger'>01.14.2025 7:05:09 PM</span>
+<span class='badge badge-default'>00:00:07:311</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:09:18 PM</td>
+        <td>7:05:09 PM</td>
         <td>
           Test Passed
         </td>
@@ -202,9 +202,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">OrderHistoryTest</p>
+            <p class="name">ProductErrorValidation</p>
             <p class="text-sm">
-              <span>5:09:17 PM</span> / <span>00:00:01:781</span>
+              <span>7:05:12 PM</span> / <span>00:00:05:844</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -212,10 +212,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">OrderHistoryTest</h5>
-<span class='badge badge-success'>10.23.2024 5:09:17 PM</span>
-<span class='badge badge-danger'>10.23.2024 5:09:18 PM</span>
-<span class='badge badge-default'>00:00:01:781</span>
+<h5 class="test-status text-pass">ProductErrorValidation</h5>
+<span class='badge badge-success'>01.14.2025 7:05:12 PM</span>
+<span class='badge badge-danger'>01.14.2025 7:05:18 PM</span>
+<span class='badge badge-default'>00:00:05:844</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -228,7 +228,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:09:18 PM</td>
+        <td>7:05:18 PM</td>
         <td>
           Test Passed
         </td>
@@ -252,13 +252,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Oct 23, 2024 05:08:52 PM</h3>
+<h3>Jan 14, 2025 07:04:32 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Oct 23, 2024 05:09:18 PM</h3>
+<h3>Jan 14, 2025 07:05:18 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -328,7 +328,7 @@
 </div></div>
 <script>
 var timeline = {
-"LoginErrorValidation":1.821,"submitOrder":7.319,"ProductErrorValidation":9.149,"OrderHistoryTest":1.781
+"submitOrder":7.372,"LoginErrorValidation":3.372,"OrderHistoryTest":7.311,"ProductErrorValidation":5.844
 };
 </script>
 <div class="row">
